BOOKKEEPER-340: Test backward compatibility for hedwig between different versions. (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1369854 13f79535-47bb-0310-9956-ffa450edef68

--- a/compat-deps/pom.xml
+++ b/compat-deps/pom.xml
@@ -33,6 +33,8 @@
   <modules>
     <module>bookkeeper-server-compat-4.0.0</module>
     <module>bookkeeper-server-compat-4.1.0</module>
+    <module>hedwig-server-compat-4.0.0</module>
+    <module>hedwig-server-compat-4.1.0</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
