--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -83,6 +83,11 @@
       <version>1.2</version>
     </dependency>
     <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.6</version>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.1</version>
