BOOKKEEPER-143: Add SSL support for hedwig cpp client (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1392319 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-client/src/main/cpp/Makefile.am
+++ b/hedwig-client/src/main/cpp/Makefile.am
@@ -27,3 +27,12 @@ pkgconfigdir = $(libdir)/pkgconfig
 nodist_pkgconfig_DATA = hedwig-0.1.pc
 
 EXTRA_DIST = $(DX_CONFIG) doc/html
+
+check:
+	cd test; make check
+
+sslcheck:
+	cd test; make sslcheck
+
+simplecheck:
+	cd test; make simplecheck
