--- a/compat-deps/hedwig-server-compat-4.0.0/pom.xml
+++ b/compat-deps/hedwig-server-compat-4.0.0/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>compat-deps</artifactId>
     <groupId>org.apache.bookkeeper</groupId>
-    <version>4.2.1-SNAPSHOT</version>
+    <version>4.2.1</version>
   </parent>
   <groupId>org.apache.bookkeeper</groupId>
   <artifactId>hedwig-server-compat400</artifactId>
