BOOKKEEPER-603: Support Boost 1.53 for Hedwig Cpp Client (jiannan via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1488954 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-client/src/main/cpp/scripts/log4cxx.conf
+++ b/hedwig-client/src/main/cpp/scripts/log4cxx.conf
@@ -28,9 +28,9 @@ log4j.appender.hedwig.fileName=./testLog.log
 log4j.appender.hedwig.layout=org.apache.log4j.PatternLayout
 log4j.appender.hedwig.layout.ConversionPattern=[%d{%H:%M:%S.%l}] %t %p %c - %m%n
 
-log4j.appender.hedwig=org.apache.log4j.RollingFileAppender
+log4j.appender.hedwigtest=org.apache.log4j.RollingFileAppender
 #log4j.appender.hedwigtest=org.apache.log4j.ConsoleAppender
-log4j.appender.hedwig.fileName=./testLog.log
+log4j.appender.hedwigtest.fileName=./testLog.log
 log4j.appender.hedwigtest.layout=org.apache.log4j.PatternLayout
 log4j.appender.hedwigtest.layout.ConversionPattern=[%d{%H:%M:%S.%l}] %t %p %c - %m%n
 
