--- a/hedwig-protocol/pom.xml
+++ b/hedwig-protocol/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
-    <version>4.2.2-SNAPSHOT</version>
+    <version>4.2.2</version>
   </parent>
   <artifactId>hedwig-protocol</artifactId>
   <packaging>jar</packaging>
