--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
-    <version>4.2.2-SNAPSHOT</version>
+    <version>4.2.2</version>
   </parent>
   <properties>
       <mainclass>org.apache.hedwig.server.netty.PubSubServer</mainclass>
