BOOKKEEPER-684. ZK logging is oververbose, can cause oom in tests (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1524846 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-benchmark/src/test/resources/log4j.properties
+++ b/bookkeeper-benchmark/src/test/resources/log4j.properties
@@ -33,6 +33,7 @@ log4j.rootLogger=INFO, CONSOLE
 
 # Example with rolling log file and tracing
 #log4j.rootLogger=TRACE, CONSOLE, ROLLINGFILE, TRACEFILE
+log4j.logger.org.apache.zookeeper=ERROR
 
 #
 # Log INFO level and above messages to the console
