--- a/hedwig-server/src/test/resources/log4j.properties
+++ b/hedwig-server/src/test/resources/log4j.properties
@@ -33,6 +33,7 @@ log4j.rootLogger=INFO, CONSOLE
 
 # Example with rolling log file and tracing
 #log4j.rootLogger=TRACE, CONSOLE, ROLLINGFILE, TRACEFILE
+log4j.logger.org.apache.zookeeper=ERROR
 
 #
 # Log INFO level and above messages to the console
