BOOKKEEPER-703: Document all the settings added in BOOKKEEPER-656 (sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1560917 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -54,6 +54,8 @@ journalDirectory=/tmp/bk-txn
 # which reduce the contention between random i/o and sequential write.
 # It is possible to run with a single disk, but performance will be significantly lower.
 ledgerDirectories=/tmp/bk-data
+# Directories to store index files. If not specified, will use ledgerDirectories to store.
+# indexDirectories=/tmp/bk-data
 
 # Ledger Manager Class
 # What kind of ledger manager is used to manage how ledgers are stored, managed
@@ -64,6 +66,9 @@ ledgerDirectories=/tmp/bk-data
 # This parameter is used by zookeeper-based ledger manager as a root znode to
 # store all ledgers.
 # zkLedgersRootPath=/ledgers
+
+# Enable/Disable entry logger preallocation
+# entryLogFilePreallocationEnabled=true
 
 # Max file size of entry logger, in bytes
 # A new entry log file will be created when the old one reaches the file size limitation
@@ -113,6 +118,31 @@ ledgerDirectories=/tmp/bk-data
 # Keep a number of old journal files would help data recovery in specia case
 #
 # journalMaxBackups=5
+
+# How much space should we pre-allocate at a time in the journal
+# journalPreAllocSizeMB=16
+
+# Size of the write buffers used for the journal
+# journalWriteBufferSizeKB=64
+
+# Should we remove pages from page cache after force write
+# journalRemoveFromPageCache=false
+
+# Should we group journal force writes, which optimize group commit
+# for higher throughput
+# journalAdaptiveGroupWrites=true
+
+# Maximum latency to impose on a journal write to achieve grouping
+# journalMaxGroupWaitMSec=200
+
+# Maximum writes to buffer to achieve grouping
+# journalBufferedWritesThreshold=524288
+
+# If we should flush the journal when journal queue is empty
+# journalFlushWhenQueueEmpty=false
+
+# The number of threads that should handle journal callbacks
+# numJournalCallbackThreads=1
 
 # How long the interval to trigger next garbage collection, in milliseconds
 # Since garbage collection is running in background, too frequent gc
@@ -213,3 +243,17 @@ zkTimeout=10000
 # Note that periodic checking will put extra load on the cluster, so it should
 # not be run more frequently than once a day.
 #auditorPeriodicCheckInterval=604800
+
+# number of threads that should handle write requests. if zero, the writes would
+# be handled by netty threads directly.
+# numAddWorkerThreads=1
+
+# number of threads that should handle read requests. if zero, the reads would
+# be handled by netty threads directly.
+# numReadWorkerThreads=1
+
+# The number of bytes we should use as capacity for BufferedReadChannel. Default is 512 bytes.
+# readBufferSizeBytes=512
+
+# The number of bytes used as capacity for the write buffer. Default is 64KB.
+# writeBufferSizeBytes=65536
