BOOKKEEPER-744: Run the auditor bookie check periodically (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1592705 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -244,6 +244,15 @@ zkTimeout=10000
 # not be run more frequently than once a day.
 #auditorPeriodicCheckInterval=604800
 
+# The interval between auditor bookie checks.
+# The auditor bookie check, checks ledger metadata to see which bookies should
+# contain entries for each ledger. If a bookie which should contain entries is
+# unavailable, then the ledger containing that entry is marked for recovery.
+# Setting this to 0 disabled the periodic check. Bookie checks will still
+# run when a bookie fails.
+# The interval is specified in seconds.
+#auditorPeriodicBookieCheckInterval=84600
+
 # number of threads that should handle write requests. if zero, the writes would
 # be handled by netty threads directly.
 # numAddWorkerThreads=1
