BOOKKEEPER-629: Support hostname based ledger metadata to help users to change IP with existing installation (rakeshr via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1593518 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -266,3 +266,9 @@ zkTimeout=10000
 
 # The number of bytes used as capacity for the write buffer. Default is 64KB.
 # writeBufferSizeBytes=65536
+
+# Whether the bookie should use its hostname to register with the
+# co-ordination service(eg: zookeeper service).
+# When false, bookie will use its ipaddress for the registration.
+# Defaults to false.
+#useHostNameAsBookieID=false
