BOOKEEPER-697. stats collection on bookkeeper server (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1615338 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -272,3 +272,6 @@ zkTimeout=10000
 # When false, bookie will use its ipaddress for the registration.
 # Defaults to false.
 #useHostNameAsBookieID=false
+
+# Stats Provider Class
+#statsProviderClass=org.apache.bookkeeper.stats.CodahaleMetricsProvider
