--- a/hedwig-client-jms/pom.xml
+++ b/hedwig-client-jms/pom.xml
@@ -88,7 +88,7 @@
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
-      <version>3.4.3</version>
+      <version>${zookeeper.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
