--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -62,9 +62,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.netty</groupId>
+      <groupId>io.netty</groupId>
       <artifactId>netty</artifactId>
-      <version>3.2.4.Final</version>
+      <version>${netty.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -75,7 +75,7 @@
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
-      <version>3.4.3</version>
+      <version>${zookeeper.version}</version>
       <type>jar</type>
     </dependency>
     <dependency>
