--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <!-- ProtocolBuffer version -->
     <protobuf.version>2.4.1</protobuf.version>
-    <!-- Guava version -->
     <guava.version>13.0.1</guava.version>
+    <netty.version>3.9.4.Final</netty.version>
+    <zookeeper.version>3.4.6</zookeeper.version>
   </properties>
   <url>http://zookeeper.apache.org/bookkeeper</url>
   <build>
