--- a/compat-deps/hedwig-server-compat-4.1.0/pom.xml
+++ b/compat-deps/hedwig-server-compat-4.1.0/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>compat-deps</artifactId>
     <groupId>org.apache.bookkeeper</groupId>
-    <version>4.3.0-SNAPSHOT</version>
+    <version>4.3.0</version>
   </parent>
   <groupId>org.apache.bookkeeper</groupId>
   <artifactId>hedwig-server-compat410</artifactId>
