--- a/compat-deps/pom.xml
+++ b/compat-deps/pom.xml
@@ -22,11 +22,11 @@
   <parent>
     <artifactId>bookkeeper</artifactId>
     <groupId>org.apache.bookkeeper</groupId>
-    <version>4.2.3</version>
+    <version>4.2.4-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.bookkeeper</groupId>
-  <version>4.2.3</version>
+  <version>4.2.4-SNAPSHOT</version>
   <artifactId>compat-deps</artifactId>
   <packaging>pom</packaging>
   <name>compability dependencies</name>
