--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
-    <version>4.2.3</version>
+    <version>4.2.4-SNAPSHOT</version>
   </parent>
   <properties>
       <mainclass>org.apache.hedwig.client.App</mainclass>
