BOOKKEEPER-827 change throttle in GarbageCollector to use either "by entry" or "by byte" (Jia Zhai via fpj)

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -109,6 +109,15 @@ ledgerDirectories=/tmp/bk-data
 # Set the rate at which compaction will readd entries. The unit is adds per second.
 #compactionRate=1000
 
+# Throttle compaction by bytes or by entries. 
+#isThrottleByBytes=false
+
+# Set the rate at which compaction will readd entries. The unit is adds per second.
+#compactionRateByEntries=1000
+
+# Set the rate at which compaction will readd entries. The unit is bytes added per second.
+#compactionRateByBytes=1000000
+
 # Max file size of journal file, in mega bytes
 # A new journal file will be created when the old one reaches the file size limitation
 #
