--- a/hedwig-client-jms/pom.xml
+++ b/hedwig-client-jms/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
-    <version>4.3.1-SNAPSHOT</version>
+    <version>4.3.1</version>
   </parent>
   <groupId>org.apache.bookkeeper</groupId>
   <artifactId>hedwig-client-jms</artifactId>
