BOOKKEEPER-895: GC ledgers that are no longer a part of the ensemble
Change-Id: I3f74e09162f9a1116dd47a19262923ced940b7f2

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -162,6 +162,11 @@ ledgerDirectories=/tmp/bk-data
 # interval if there is enough disk capacity.
 # gcWaitTime=1000
 
+# How long the interval to trigger next garbage collection of overreplicated
+# ledgers, in milliseconds [Default: 1 day]. This should not be run very frequently since we read
+# the metadata for all the ledgers on the bookie from zk
+# gcOverreplicatedLedgerWaitTime=86400000
+
 # How long the interval to flush ledger index pages to disk, in milliseconds
 # Flushing index files will introduce much random disk I/O.
 # If separating journal dir and ledger dirs each on different devices,
