BOOKKEEPER-851: Simplified configuration logic

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -67,6 +67,9 @@ ledgerDirectories=/tmp/bk-data
 # store all ledgers.
 # zkLedgersRootPath=/ledgers
 
+# Ledger storage implementation class
+# ledgerStorageClass=org.apache.bookkeeper.bookie.SortedLedgerStorage
+
 # Enable/Disable entry logger preallocation
 # entryLogFilePreallocationEnabled=true
 
