--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -252,6 +252,14 @@
             <descriptor>../src/assemble/bin.xml</descriptor>
           </descriptors>
         </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.rat</groupId>
