BOOKKEEPER-937 Upgrade protobuf to 2.6

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -200,6 +200,10 @@
               <minimizeJar>true</minimizeJar>
               <relocations>
                 <relocation>
+                  <pattern>com.google.protobuf</pattern>
+                  <shadedPattern>bk-shade.com.google.proto_${protobuf.version}</shadedPattern>
+                </relocation>
+                <relocation>
                   <pattern>com.google</pattern>
                   <shadedPattern>bk-shade.com.google</shadedPattern>
                 </relocation>
