BOOKKEEPER-944: LowWaterMark Storage Threshold
LowWaterMark Storage Threshold and code refactoring

    - Current implementation toggles READONLY status of the bookie as soon as a directory usage falls below the disk storage threshold.
      Added LowWaterMark parameter that limits such switches.
    	1. Bookie transition from RW to RONLY only when all the ledger dirs usage > HWM (storage threshold)
    	2. Bookie transition from RONLY to  RW only when total system disk usage (ledger/index disks) capacity is < LWM
    	3. When bookie is in RW mode all disks which are < HWM (storage threshold) are RW
    - refactored code and separated LedgerDirsMonitor from LedgerDirsManager, to remove circular dependency
      between LedgerDirsManager and LedgerDirsMonitor and also it improves testability by making them separate classes.
      It becomes easier to do functional/unit level testing and fault-injection testing at LedgerDirsMonitor class level.
    - relevant testcases

Author: Andrey Yegorov <ayegorov@salesforce.com>
Co-Author: Charan Reddy Guttapalem <cguttapalem@salesforce.com>

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -257,6 +257,14 @@ zkTimeout=10000
 #Valid values should be in between 0 and 1 (exclusive). 
 #diskUsageThreshold=0.95
 
+#Set the disk free space low water mark threshold. Disk is considered full when 
+#usage threshold is exceeded. Disk returns back to non-full state when usage is 
+#below low water mark threshold. This prevents it from going back and forth 
+#between these states frequently when concurrent writes and compaction are 
+#happening. This also prevent bookie from switching frequently between 
+#read-only and read-writes states in the same cases.
+#diskUsageLwmThreshold=0.90
+
 #Disk check interval in milli seconds, interval to check the ledger dirs usage.
 #Default is 10000
 #diskCheckInterval=10000
