--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -69,6 +69,12 @@
       <artifactId>zookeeper</artifactId>
       <version>${zookeeper.version}</version>
       <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>net.java.dev.javacc</groupId>
+          <artifactId>javacc</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
