--- a/compat-deps/bookkeeper-server-compat-4.0.0/pom.xml
+++ b/compat-deps/bookkeeper-server-compat-4.0.0/pom.xml
@@ -62,6 +62,7 @@
                   <include>com.google.protobuf:protobuf-java</include>
                   <include>org.apache.*:*</include>
                   <include>org.jboss.*:*</include>
+                  <include>com.google.guava:guava</include>
                   <include>commons-*:*</include>
                 </includes>
                 <excludes>
@@ -83,6 +84,10 @@
                 <relocation>
                   <pattern>org.jboss</pattern>
                   <shadedPattern>org.jboss.bk_v4_0_0</shadedPattern>
+                </relocation>
+                 <relocation>
+                  <pattern>com.google</pattern>
+                  <shadedPattern>com.google.bk_v4_0_0</shadedPattern>
                 </relocation>
               </relocations>
             </configuration>
