- Use netty-transport artifact instead of netty-all to restrict to Nio netty transport - PendingAddOps is ledgerHandle is a ConcurrentLinkedQueue, whose iterator is weakly consistent. As a result in unSetSuccessAndSendWriteRequest() call, the iterator once initialized may not see all the updates to the queue made by PendingAddOps.unsetSuccessAndSendWriteRequest(). If any removed pendingAddOp is selected to be send write requests will result in resurrecting a dead toSend ByteBuf and Exception.

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -214,7 +214,27 @@
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
+      <artifactId>netty-transport-native-epoll</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-transport</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-common</artifactId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-handler</artifactId>
       <version>${netty.version}</version>
     </dependency>
   </dependencies>
