--- a/compat-deps/bookkeeper-server-compat-4.2.0/pom.xml
+++ b/compat-deps/bookkeeper-server-compat-4.2.0/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>bookkeeper-server</artifactId>
       <version>4.2.0</version>
     </dependency>
+    <dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>13.0.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
